Your commit message

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "html2canvas": "^1.4.1",
     "isbot": "^5.1.0",
     "jspdf": "^3.0.3",
-    "node-cron": "^4.2.1",
     "prisma": "^6.2.1",
     "puppeteer": "^24.23.0",
     "react": "^18.2.0",
@@ -60,6 +59,8 @@
     "@types/react-easy-crop": "^1.16.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^10.0.1",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
